# BadmintonSystem

./: client.py  databaseManagement.py  main.py  package-lock.json  package.json  pyproject.toml  server.py  utilities.py
BadmintonSystem/: manage.py
BadmintonSystem/BadmintonSystem/: asgi.py  settings.py  urls.py  wsgi.py
CourtReservation/: manage.py  models.py
CourtReservation/CourtReservation/: asgi.py  settings.py  urls.py  wsgi.py
CourtReservation/frontend/: package.json
CourtReservation/sim/: models.py  urls.py  views.py
CourtReservation/sim/migrations/: 0001_initial.py
CourtReservation/sim/templates/: base.html
badmintonfrontend/: package-lock.json  package.json
badmintonfrontend/app/: layout.tsx  page.tsx
badmintonfrontend/app/userList/: page.tsx
