[project]
name = "badmintonsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "dotenv>=0.9.9",
    "faker>=37.4.0",
    "flask>=3.1.1",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.3.0",
    "mysqlclient>=2.2.7",
    "rich>=14.0.0",
]
